--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,46 @@
 body {
-    background: url(game-background.png) no-repeat;
+    background: url(../images/background-game-name.jpg) no-repeat;
+    background-size: 100%;
+        
+}
+
+/* //crystals and text styling */
+#skullRow {
+    padding: 10px 0px 0px 250px;
+    width: 85%;
+}
+
+#red {
+    border: 1px;
+    border-radius: 50%;
+}
+
+#blue {
+    border: 1px;
+    border-radius: 50%;
+}
+
+#yellow {
+    border: 1px;
+    border-radius: 50%;
+}
+
+#green {
+    border: 1px;
+    border-radius: 50%;
+}
+
+h1 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+h2 {
+    font-size: 16px;
+    color: white;
+    padding: 10px;
+}
+
+p {
+    color: white;
+    font-size: 30px;
 }
