--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,10 +84,64 @@ h1 {
 h2 {
     font-size: 14px;
     color: white;
-    padding: 10px;
+    padding: 20px;
 }
 
 p {
     color: white;
     font-size: 40px;
+}
+
+
+@media (max-width: 768px) {
+    .container {
+        width: 100%;
+    }
+    #totalPoints {
+        width: 100%;
+    }
+    #skullRow {
+        width: 100%;
+    }
+    #targetNumber {
+        width: 100%;
+    }
+    .card {
+        width: 100%;
+    }
+}
+
+@media (max-width: 640px) {
+    .container {
+        width: 100%;
+    }
+    #totalPoints {
+        width: 100%;
+    }
+    #skullRow {
+        width: 100%;
+    }
+    #targetNumber {
+        width: 100%;
+    }
+    .card {
+        width: 100%;
+    }
+}
+@media (max-width: 980px) {
+    .container {
+        width: 100%;
+    }
+    #totalPoints {
+        width: 100%;
+    }
+    #skullRow {
+        width: 100%;
+    }
+    #targetNumber {
+        width: 100%;
+    }
+    .card {
+        width: 100%;
+    }
 }
